cmake_minimum_required(VERSION 3.16)
project(case4 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
include(FetchContent)
FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip)
FetchContent_MakeAvailable(googletest)
enable_testing()
add_executable(tests tests/test_queue.cpp tests/test_heap.cpp tests/test_bst.cpp)
target_include_directories(tests PRIVATE include)
target_link_libraries(tests GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(tests)
